fixed card flip on safari

--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -337,13 +337,13 @@ ul{
 }
 
 .flipper {
-	transition: transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	transition: transform 3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 	transform-style: preserve-3d;
     position: relative;
 }
-    .backFlip {
-		transform: rotateY(0deg);
-    }
+    // .backFlip {
+	// 	transform: rotateY(0deg);
+    // }
     .frontFlip {
 	    transform: rotateY(180deg);
     }
@@ -375,7 +375,8 @@ ul{
 }
 
 .front, .back {
-	backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
 	transition: transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     transform-style: preserve-3d;
     text-align: center;
